// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
[
  [
    "assign",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<div
  className="dropdown"
>
  <Toggler
    closeOnEscape={true}
    onRequestClose={[Function]}
    open={true}
    overlay={
      <withCurrentUserContext(SetAssigneePopup)
        onSelect={[MockFunction]}
      />
    }
  >
    <ButtonLink
      aria-expanded={true}
      aria-label="issue.assign.assigned_to_x_click_to_change.John Doe"
      className="issue-action issue-action-with-options js-issue-assign"
      onClick={[Function]}
    >
      <span
        className="text-top"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          hash="gravatarhash"
          name=""
          size={16}
        />
      </span>
      <span
        className="issue-meta-label"
        title="John Doe"
      >
        John Doe
      </span>
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render a fallback assignee display if assignee info are not available 1`] = `
<div
  className="dropdown"
>
  <Toggler
    closeOnEscape={true}
    onRequestClose={[Function]}
    open={false}
    overlay={
      <withCurrentUserContext(SetAssigneePopup)
        onSelect={[MockFunction]}
      />
    }
  >
    <ButtonLink
      aria-expanded={false}
      aria-label="issue.assign.unassigned_click_to_assign"
      className="issue-action issue-action-with-options js-issue-assign"
      onClick={[Function]}
    >
      <span
        className="issue-meta-label"
      >
        unassigned
      </span>
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render with the action 1`] = `
<div
  className="dropdown"
>
  <Toggler
    closeOnEscape={true}
    onRequestClose={[Function]}
    open={false}
    overlay={
      <withCurrentUserContext(SetAssigneePopup)
        onSelect={[MockFunction]}
      />
    }
  >
    <ButtonLink
      aria-expanded={false}
      aria-label="issue.assign.assigned_to_x_click_to_change.John Doe"
      className="issue-action issue-action-with-options js-issue-assign"
      onClick={[Function]}
    >
      <span
        className="text-top"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          hash="gravatarhash"
          name=""
          size={16}
        />
      </span>
      <span
        className="issue-meta-label"
        title="John Doe"
      >
        John Doe
      </span>
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<Fragment>
  <span
    className="text-top"
  >
    <withAppStateContext(Avatar)
      className="little-spacer-right"
      hash="gravatarhash"
      name=""
      size={16}
    />
  </span>
  <span
    className="issue-meta-label"
    title="John Doe"
  >
    John Doe
  </span>
</Fragment>
`;
